--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,9 @@ h2 {
   font-size: 4.84vw;
   color: #1B494B;
 }
+
+p {
+  font-family: 'DM Sans', sans-serif;
+  color: white;
+  font-size: 2.03vw;
+}
